<resources>
    <string name="app_name">My Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_images">Recipe Images</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="picture_url">Picture URL</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="save">Save</string>
    <string name="ingredients">Ingredients</string>
    <string name="add">+</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
</resources>
