<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:layout_width="411dp"
            android:layout_height="47dp"
            android:id="@+id/recipeTitle"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView" android:background="#009688"/>
    <EditText
            android:id="@+id/pictureText"
            android:layout_height="41dp"
            android:hint="@string/picture_url"
            android:inputType="textPersonName"
            android:layout_width="333dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp">
    </EditText>
    <EditText
            android:id="@+id/titleText"
            android:layout_height="41dp"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:layout_width="333dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recipeTitle" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp">
    </EditText>
    <EditText
            android:id="@+id/ingredientQuantity"
            android:layout_height="45dp"
            android:hint="@string/quantity"
            android:inputType="textPersonName"
            android:layout_width="73dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditListView" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp">
    </EditText>
    <EditText
            android:id="@+id/ingredientUnit"
            android:layout_height="45dp"
            android:hint="@string/unit"
            android:inputType="textPersonName"
            android:layout_width="88dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditListView" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintStart_toEndOf="@+id/ingredientQuantity">
    </EditText>
    <EditText
            android:id="@+id/ingredientName"
            android:layout_height="45dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_width="97dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditListView" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintStart_toEndOf="@+id/ingredientUnit">
    </EditText>
    <EditText
            android:id="@+id/descriptionText"
            android:layout_height="139dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="333dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditListView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp">
    </EditText>
    <ListView
            android:id="@+id/ingredientsEditListView"
            android:layout_width="331dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pictureText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.973"/>
    <Button
            android:text="@string/add"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:id="@+id/addButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditListView"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText" app:layout_constraintVertical_bias="0.125"/>
</android.support.constraint.ConstraintLayout>